# rust-stripe-integration

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Makefile  diesel.toml
backend/configs/: dev.toml
backend/migrations/2025-02-06-014127_create_user_table/: up.sql
backend/migrations/2025-02-06-015355_create_profile_table/: up.sql
backend/migrations/2025-02-06-015700_create_plans_table/: down.sql  up.sql
backend/migrations/2025-02-06-023707_create_subscription_table/: up.sql
backend/migrations/2025-02-08-015339_create_plan_table/: up.sql
backend/migrations/2025-02-08-020026_create_subscription_table/: down.sql  up.sql
backend/migrations/2025-02-08-041813_create_plan_table/: up.sql
backend/migrations/2025-02-08-041940_create_subscription_table/: up.sql
backend/migrations/2025-02-10-204752_create_plan_table/: up.sql
backend/migrations/2025-02-10-210027_create_rate_table/: down.sql  up.sql
backend/migrations/2025-02-10-210516_create_subscription_table/: down.sql  up.sql
backend/migrations/2025-02-14-165949_create_users_table/: up.sql
backend/migrations/2025-02-14-170220_create_profiles_table/: down.sql  up.sql
backend/migrations/2025-02-14-170536_create_subscriptions_table/: up.sql
backend/migrations/2025-02-18-162001_create_subscriptions_table/: down.sql  up.sql
backend/src/: main.rs  prelude.rs  routes.rs  schema.rs  tables.rs
backend/src/application/: mod.rs
backend/src/application/payment/: dto.rs  event_use_cases.rs  mod.rs  service.rs  use_cases.rs
backend/src/application/plan/: dtos.rs  mod.rs  services.rs
backend/src/application/subscription/: commands.rs  dtos.rs  extractors.rs  mod.rs  service.rs  use_cases.rs
backend/src/application/user/: dtos.rs  extractor.rs  mod.rs  service.rs  use_cases.rs
backend/src/domain/: entities.rs  mod.rs  services.rs
backend/src/domain/billing/: client.rs  mod.rs  repository.rs
backend/src/domain/payment/: client.rs  entities.rs  mod.rs  old_entities.rs  service.rs
backend/src/infra/: cli.rs  config.rs  constants.rs  dependencies.rs  mod.rs  web.rs
backend/src/presentation/: handlers.rs  mod.rs  routes.rs
backend/src/shared/: extractors.rs
(+99 files in other folders)
