[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stripe = { version = "0.39.1", features = ["runtime-tokio-hyper"] }
actix-web = "4.9.0"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
actix-cors = "0.7.0"
thiserror = "2.0.11"
clap = { version = "4.5.28", features = ["derive"] }
toml = "0.8.19"
env_logger = "0.11.6"
tracing = "0.1.41"
regex = "1.11.1"
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.7", features = ["chrono", "postgres", "r2d2", "uuid"] }
diesel_migrations = "2.2.0"
uuid = { version = "1.13.1", features = ["v4"] }